--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             {% assign slug = parts | join:"-" | replace:parts[0],"" | replace:parts[1], "" | replace_first:"--","" %}
             <div id="{{ slug }}"
                  class="step"
-                 data-x="{{ parts[0] }}"
-                 data-y="{{ parts[1] }}"
+                 data-x="{{ parts[0] | times: 1000 }}"
+                 data-y="{{ parts[1] | times: 1000 }}"
                  data-z="{{ slide.z }}"
                  scale="{{ slide.scale }}"
                  data-rotate-x="{{ slide.rotate-x }}"
@@ -36,7 +36,7 @@
                 {% if slide.octicon %}
                   <span class="mega-octicon octicon-{{ slide.octicon }}">&nbsp;</span>
                 {% endif %}
-                {{ slide.title | markdownify }}
+                {{ slide.title | markdownify | replace:"<p>","" | replace: "</p>","" }}
               </h1>
 
               {{ slide.content }}
